tests/fixtures/errors/view_move_reassign.z
# E0200: a map view's payload cannot be moved out by reassignment —
# it would drain the map's stored value. Copy to keep it.
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    got: m.get key: "a".string
    keep: "".string
    match (
        got
    ) case some then {
        keep = got
    } case none then {}
    print keep
}
